package ru.nsu.romanenko.Abstractions;

public interface Worker {
    void work() throws InterruptedException;
}
