package ru.nsu.romanenko.Simulation.Models;
public record Order(int id, Pizza pizza, String address) {}
