package ru.nsu.romanenko.Simulation.Models;
public record Pizza(boolean isTesty, int size, int price) {}