package ru.nsu.romanenko.System;
public record Config(int bakersCount, int bakersSpeed, int couriersCount,
                     int couriersCapacity, int warehouseCapacity) {}